Update personal information and enhance resume sections in index.html

--- a/index.html
+++ b/index.html
@@ -10,34 +10,76 @@
 
 <body>
     <header>
-        <h1>David Hörz</h1>
-        <p>Web Developer | Designer | Programmer</p>
+        <h1>David Alan Hörz</h1>
+        <p>Hamburg, Germany</p>
+        <p>
+            <a href="mailto:DavidHoerz@outlook.com">DavidHoerz@outlook.com</a> |
+            <a href="#" target="_blank">LinkedIn</a>
+        </p>
+        <p style="font-size: 1rem; color: #ccc;">Eligible to sign internship agreement via IE University</p>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Passionate Developer.</p>
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>Team Player and Independent Worker. Solution Oriented Thinker. Passion for Development.</p>
     </section>
-    <section id="projects">
-        <h2>Projects</h2>
+    <section id="education">
+        <h2>Education</h2>
         <ul>
-            <li><strong>Project 1:</strong> Description of your project.</li>
-            <li><strong>Project 2:</strong> Description of your project.</li>
-            <li><strong>Project 3:</strong> Description of your project.</li>
+            <li>
+                <strong>IE University (IEU)</strong> – Madrid, Spain<br>
+                Bachelor in Computer Science and Artificial Intelligence<br>
+                <em>Expected: July 2027</em>
+            </li>
+            <li>
+                <strong>Gymnasium Ohlstedt (GO)</strong> – Hamburg, Germany<br>
+                Deutsches Abitur, Graduated: June 2023<br>
+                GPA: 1.5 (14/15)
+            </li>
         </ul>
     </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <section id="experience">
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                <strong>DPV Analytics – Health Care</strong>, Hamburg, Germany<br>
+                Part-Time - Software Dev (ML), June 2024 - Present
+            </li>
+            <li>
+                <strong>Lufthansa Technik – Aviation Engineering</strong>, Hamburg, Germany<br>
+                Internship – Engineering Department, June 2018
+            </li>
+            <li>
+                <strong>Intercoat – Coating Solutions</strong>, Hamburg, Germany<br>
+                Internship – IT Department, July 2017
+            </li>
+        </ul>
+    </section>
+    <section id="extracurricular">
+        <h2>Extracurricular Activities</h2>
+        <ul>
+            <li>Math private lessons tutoring (2018-2023)</li>
+            <li>Programming tutor (2018-2023)</li>
+        </ul>
+    </section>
+    <section id="languages">
+        <h2>Languages</h2>
+        <ul>
+            <li>English (Native)</li>
+            <li>German (Native)</li>
+            <li>Spanish (Basic)</li>
+        </ul>
+    </section>
+    <section id="additional">
+        <h2>Additional Information</h2>
+        <ul>
+            <li>Computer Skills: Advanced user of MS Office, video editing software, social media networks.</li>
+            <li>Other courses: Data Science Certificate, Biomimicry – Mimicking Nature in Engineering, Leadership Course
+            </li>
+            <li>Interests: Chess, Archery, Bodybuilding, Hiking</li>
+        </ul>
     </section>
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 David Alan Hörz. All rights reserved.</p>
     </footer>
 </body>
 
