--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,10 @@
     <meta property="og:title" content="UML Editor - Collaborative Diagram Creation" />
     <meta property="og:description" content="Create and collaborate on UML diagrams with live preview. Markdown-based editor with Mermaid.js integration for teams." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content=" " />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
